[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprite/Player Skin1 — копия/adventurer-run-00.png" type="Texture" id=1]
[ext_resource path="res://sprite/Player Skin1 — копия/adventurer-run-01-export.png" type="Texture" id=2]
[ext_resource path="res://sprite/Player Skin1/attack/adventurer-attack2-05-export.png" type="Texture" id=3]
[ext_resource path="res://sprite/Player Skin1/fail/adventurer-fall-00-export.png" type="Texture" id=4]
[ext_resource path="res://sprite/Player Skin1/idle/adventurer-idle-02-export.png" type="Texture" id=5]
[ext_resource path="res://sprite/Player Skin1/attack/adventurer-attack2-04-export.png" type="Texture" id=6]
[ext_resource path="res://sprite/Player Skin1/idle/adventurer-idle-03-export.png" type="Texture" id=7]
[ext_resource path="res://sprite/Player Skin1/attack/adventurer-attack2-00-export.png" type="Texture" id=8]
[ext_resource path="res://sprite/Player Skin1 — копия/adventurer-run-02-export.png" type="Texture" id=9]
[ext_resource path="res://sprite/Player Skin1/attack/adventurer-attack2-02-export.png" type="Texture" id=10]
[ext_resource path="res://sprite/Player Skin1/jump/adventurer-jump-02-export.png" type="Texture" id=11]
[ext_resource path="res://sprite/Player Skin1 — копия/adventurer-run-04-export.png" type="Texture" id=12]
[ext_resource path="res://sprite/Player Skin1/idle/adventurer-idle-00-export.png" type="Texture" id=13]
[ext_resource path="res://sprite/Player Skin1 — копия/adventurer-run-03-export.png" type="Texture" id=14]
[ext_resource path="res://sprite/Player Skin1/idle/adventurer-idle-01-export.png" type="Texture" id=15]
[ext_resource path="res://sprite/Player Skin1/attack/adventurer-attack2-01-export.png" type="Texture" id=16]
[ext_resource path="res://sprite/Player Skin1/attack/adventurer-attack2-03-export.png" type="Texture" id=17]
[ext_resource path="res://кнопки/Sprite-0001.png" type="Texture" id=18]
[ext_resource path="res://ШРИФТ/new_dynamicfont.tres" type="DynamicFont" id=19]
[ext_resource path="res://sprite/VМонеты/Sprite-0009.png" type="Texture" id=20]
[ext_resource path="res://sprite/блоки/background/pine2-export.png" type="Texture" id=21]
[ext_resource path="res://sprite/блоки/background/pine1-export.png" type="Texture" id=22]
[ext_resource path="res://кнопки/Sprite-0002.png" type="Texture" id=23]
[ext_resource path="res://sprite/блоки/background/cloud-export.png" type="Texture" id=24]
[ext_resource path="res://sprite/блоки/background/mountain2-export.png" type="Texture" id=25]
[ext_resource path="res://sprite/блоки/background/sky-export.png" type="Texture" id=26]
[ext_resource path="res://sprite/новый интерфейс/Back.png" type="Texture" id=27]
[ext_resource path="res://MAIK.gd" type="Script" id=28]
[ext_resource path="res://sprite/Замок/1673091316210.png" type="Texture" id=29]
[ext_resource path="res://sprite/VМонеты/красные_монеты.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "attac",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "attac 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "jump2",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[node name="MAIK" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 28 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sky-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 142.438 )
scale = Vector2( 0.125948, 0.137855 )
texture = ExtResource( 26 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mountain2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 400, 224 )
scale = Vector2( 0.12064, 0.156496 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pine1-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 304 )
scale = Vector2( 0.119767, 0.0976353 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pine2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 344 )
scale = Vector2( 0.121512, 0.0562814 )
texture = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cloud-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 115 )
scale = Vector2( 0.120702, 0.120702 )
texture = ExtResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 288, 176 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 480.0
margin_top = 240.0
margin_right = 4080.0
margin_bottom = 1620.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 23 )

[node name="Sprite-0009" type="Sprite" parent="."]
position = Vector2( 640, 80 )
rotation = 1.5708
scale = Vector2( 0.253945, 0.253945 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="."]
margin_left = 504.0
margin_top = 8.0
margin_right = 773.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 19 )
text = "HP: 7
SPEED: normal
DAMAGE : 1"

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 447.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 19 )
text = "Mike, the initial fighter"

[node name="Label3" type="Label" parent="."]
margin_left = 640.0
margin_top = 216.0
margin_right = 781.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 19 )
text = "/ 20"

[node name="Label4" type="Label" parent="."]
margin_left = 576.0
margin_top = 216.0
margin_right = 616.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 19 )
text = "0"

[node name="НАЗАД" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 288.0
margin_right = 81.0
margin_bottom = 361.0
rect_scale = Vector2( 1.4, 1.4 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 27 )
expand = true

[node name="Button" type="Button" parent="."]
margin_left = 528.0
margin_top = 272.0
margin_right = 784.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 19 )
text = "Improve"
flat = true

[node name="Zvezda1_maik" type="Sprite" parent="."]
visible = false
position = Vector2( 56.0001, 96 )
scale = Vector2( 0.242065, 0.242065 )
texture = ExtResource( 29 )

[node name="Zvezda1_maik2" type="Sprite" parent="."]
visible = false
position = Vector2( 128, 96 )
scale = Vector2( 0.242065, 0.242065 )
texture = ExtResource( 29 )

[node name="Zvezda1_maik3" type="Sprite" parent="."]
visible = false
position = Vector2( 200, 96 )
scale = Vector2( 0.242065, 0.242065 )
texture = ExtResource( 29 )

[node name="КрасныеМонеты" type="Sprite" parent="."]
position = Vector2( 552, 240 )
scale = Vector2( 0.241, 0.241 )
texture = ExtResource( 30 )

[connection signal="pressed" from="НАЗАД" to="." method="_on__pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
